--- a/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
+++ b/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">BE_Covoiturage</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_edit_setting">EditSetting</string>
+
 </resources>
