--- a/trunk/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
+++ b/trunk/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
@@ -3,8 +3,11 @@
 
     <string name="app_name">BE_Covoiturage</string>
     <string name="hello_world">Hello world!</string>
+
     <string name="action_settings">Settings</string>
     <string name="title_activity_edit_setting">EditSetting</string>
     <string name="title_activity_create_account">CreateAccountActivity</string>
 
+    <string name="error_invalid_email">Veuillez rentrer une adresse email valide</string>
+    <string name="error_field_required">Ce champ est requis</string>
 </resources>
