[android] Modification des champs de l'identité utilisateur. Séparation des affichages du profil. Modification date trajets. Chargement des trajets et autres infos utilisateur. Simplification des callbacks réseau et JSONObject [serveur] correction des requêtes trajets et utilisateur. Liste des lieux de travail

--- a/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
+++ b/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="thursday">Jeudi</string>
     <string name="friday">Vendredi</string>
     <string name="saturday">Samedi</string>
+    <string name="driver">Conducteur</string>
 
 
 </resources>
