--- a/trunk/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
+++ b/trunk/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="thursday">Jeudi</string>
     <string name="friday">Vendredi</string>
     <string name="saturday">Samedi</string>
+    <string name="driver">Conducteur</string>
 
 
 </resources>
