[android] retour dans vers la vue globale du profil. Un trajet par jour de la semaine, affichage des trajets stockés dans la BDD. Affichage du lieu de travail.

--- a/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
+++ b/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="friday">Vendredi</string>
     <string name="saturday">Samedi</string>
     <string name="driver">Conducteur</string>
+    <string name="error_no_worplace">Pas de lieux de travail disponibles. Contactez l\'administrateur.</string>
 
 
 </resources>
