--- a/trunk/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
+++ b/trunk/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="friday">Vendredi</string>
     <string name="saturday">Samedi</string>
     <string name="driver">Conducteur</string>
+    <string name="error_no_worplace">Pas de lieux de travail disponibles. Contactez l\'administrateur.</string>
 
 
 </resources>
