--- a/trunk/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
+++ b/trunk/Client/BE_Covoiturage/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="driver">Conducteur</string>
     <string name="error_no_worplace">Pas de lieux de travail disponibles. Contactez l\'administrateur.</string>
     <string name="save_button">Enregistrer</string>
+    <string name="notify_me_when_new_route">Je veux être notifié en cas de nouveau trajet</string>
 
 
 </resources>
