--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -1,7 +1,7 @@
 Ci - joint le lien du dossier contenant la documentation du projet:
- - Document SRS
- - Document SDD
- - Manuel d'utilisation
- - Images
+ - Document SRS <br/>
+ - Document SDD <br/>
+ - Manuel d'utilisation <br/>
+ - Images <br/>
 
 https://drive.google.com/folderview?id=0B04RnGjjAItMODNuNEpYZFMtRkU&usp=sharing
